@@ -89,7 +89,7 @@ public class DailyReportEmailer
      * Send the report through email.
      * 
      * @param attachment
-     *            the file conntaing the report
+     *            the file containing the report
      * @param numberOfBitstreams
      *            the number of bitstreams reported
      * 
@@ -117,7 +117,7 @@ public class DailyReportEmailer
         // create the first part of the email
         BodyPart messageBodyPart = new MimeBodyPart();
         messageBodyPart
-                .setText("This is the checksum checker report see attachement for details \n"
+                .setText("This is the checksum checker report see attachment for details \n"
                         + numberOfBitstreams
                         + " Bitstreams found with POSSIBLE issues");
         multipart.addBodyPart(messageBodyPart);
@@ -183,7 +183,7 @@ public class DailyReportEmailer
                         "c",
                         "Changed",
                         false,
-                        "Send E-mail report for all bitstrems where checksum has been changed for today");
+                        "Send E-mail report for all bitstreams where checksum has been changed for today");
         options.addOption("a", "All", false, "Send all E-mail reports");
 
         options.addOption("u", "Unchecked", false,
